# yolov5

./: .gitignore  README.md  detect.py  pyproject.toml  train.py
models/: experimental.py
