[tool.poetry]
name = "yolov5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "classify" },
    { include = "datasets" },
    { include = "models" },
    { include = "segment" },
    { include = "utils" }
]
[tool.poetry.dependencies]
python = ">=3.12"
matplotlib = ">=3.2.2"
numpy = ">=1.18.5"
opencv-python = ">=4.1.1"
Pillow = ">=7.1.2"
PyYAML = ">=5.3.1"
requests = ">=2.23.0"
scipy = ">=1.4.1"
tqdm = ">=4.64.0"
pandas = ">=1.1.4"
seaborn = ">=0.11.0"
psutil = ">=6.0.0"
thop = ">=0.1.1"
ipython = ">=8.5.0"
pycocotools = ">=2.0.7"
torchvision = ">=0.19" # requires torch 2.3.1. fixes triton candidate problem.
tensorboard = ">=2.15.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
